// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Inkomen /> > with items from BBZ, TONK, TOZO > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/inkomen"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Inkomen
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h3
          class="ams-heading ams-heading--1 _PageHeading_c5a3f1"
        >
          Inkomen
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-8-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph"
      >
        Op deze pagina vindt u informatie over uw uitkering en de ondersteuning die u krijgt omdat u weinig geld hebt.
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <ul
        class="ams-link-list"
      >
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/werk-inkomen"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Algemene informatie over Werk en Inkomen
          </a>
        </li>
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/werk-inkomen/contact/"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Contact Werk en Inkomen
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Lopende aanvragen
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Datum aanvraag
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Status
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
            </tr>
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
            </tr>
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Eerdere aanvragen
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Datum aanvraag
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Datum besluit
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
            </tr>
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
            </tr>
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              />
            </tr>
          </tbody>
        </table>
      </div>
      <a
        class="ams-link _MaLink_aa758a _MaRouterLink__no-default-underline_aa758a"
        href="/inkomen/lijst/eerdere-aanvragen"
        title="Bekijk meer eerdere aanvragen"
      >
        Toon meer
      </a>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Uitkeringsspecificaties
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <th
                class="ams-table__header-cell"
                style="width: 50%;"
              >
                Datum
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Regeling
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Document
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              >
                14 Mei 2020
              </td>
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              >
                <span
                  class="_DocumentLinkWrap_81c3b4"
                >
                  <a
                    class="ams-link _DocumentLink_81c3b4 _MaLink_aa758a _MaRouterLink__no-default-underline_aa758a"
                    href="/wpi/document/id"
                  >
                    <span
                      class="_DocumentLinkIcon_81c3b4"
                    >
                      <span
                        class="ams-icon ams-icon--heading-5"
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 32 32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 27.996h32V32H0zm22.36-13.983 2.83 2.823L16 26.044l-9.19-9.208 2.83-2.823L14 18.377V0h4v18.377z"
                          />
                        </svg>
                      </span>
                    </span>
                    PDF
                  </a>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Jaaropgaven
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <th
                class="ams-table__header-cell"
                style="width: 75%;"
              >
                Datum
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Document
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              >
                14 Mei 2020
              </td>
              <td
                class="ams-table__cell"
              >
                <span
                  class="_DocumentLinkWrap_81c3b4"
                >
                  <a
                    class="ams-link _DocumentLink_81c3b4 _MaLink_aa758a _MaRouterLink__no-default-underline_aa758a"
                    href="/wpi/document/id"
                  >
                    <span
                      class="_DocumentLinkIcon_81c3b4"
                    >
                      <span
                        class="ams-icon ams-icon--heading-5"
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 32 32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 27.996h32V32H0zm22.36-13.983 2.83 2.823L16 26.044l-9.19-9.208 2.83-2.823L14 18.377V0h4v18.377z"
                          />
                        </svg>
                      </span>
                    </span>
                    PDF
                  </a>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Inkomen /> > without items from BBZ, TONK, TOZO > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <div
    class="ams-grid"
  >
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide _PageHeadingWrap_c5a3f1"
    >
      <div
        class="_PageHeadingInner_c5a3f1"
        id="skip-to-id-AppContent"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/inkomen"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Inkomen
                </span>
              </a>
            </li>
          </ol>
        </nav>
        <h3
          class="ams-heading ams-heading--1 _PageHeading_c5a3f1"
        >
          Inkomen
        </h3>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-8-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <p
        class="ams-paragraph"
      >
        Op deze pagina vindt u informatie over uw uitkering en de ondersteuning die u krijgt omdat u weinig geld hebt.
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <ul
        class="ams-link-list"
      >
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/werk-inkomen"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Algemene informatie over Werk en Inkomen
          </a>
        </li>
        <li>
          <a
            class="ams-link-list__link"
            href="https://www.amsterdam.nl/werk-inkomen/contact/"
            rel="noreferrer"
          >
            <span
              class="ams-icon"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Contact Werk en Inkomen
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Lopende aanvragen
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <tbody
            class="ams-table__body"
          />
        </table>
      </div>
      <p
        class="ams-paragraph"
      >
        U heeft (nog) geen lopende aanvragen
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Eerdere aanvragen
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <tbody
            class="ams-table__body"
          />
        </table>
      </div>
      <p
        class="ams-paragraph"
      >
        U heeft (nog) geen eerdere aanvragen
      </p>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Uitkeringsspecificaties
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <th
                class="ams-table__header-cell"
                style="width: 50%;"
              >
                Datum
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Regeling
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Document
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              >
                14 Mei 2020
              </td>
              <td
                class="ams-table__cell"
              />
              <td
                class="ams-table__cell"
              >
                <span
                  class="_DocumentLinkWrap_81c3b4"
                >
                  <a
                    class="ams-link _DocumentLink_81c3b4 _MaLink_aa758a _MaRouterLink__no-default-underline_aa758a"
                    href="/wpi/document/id"
                  >
                    <span
                      class="_DocumentLinkIcon_81c3b4"
                    >
                      <span
                        class="ams-icon ams-icon--heading-5"
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 32 32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 27.996h32V32H0zm22.36-13.983 2.83 2.823L16 26.044l-9.19-9.208 2.83-2.823L14 18.377V0h4v18.377z"
                          />
                        </svg>
                      </span>
                    </span>
                    PDF
                  </a>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
    >
      <h3
        class="ams-heading ams-heading--2"
      >
        Jaaropgaven
      </h3>
      <div
        class="ams-table"
      >
        <table
          class="ams-table__table _TableV2_4c6825"
        >
          <thead
            class="ams-table__header"
          >
            <tr
              class="ams-table__row"
            >
              <th
                class="ams-table__header-cell"
                style="width: 75%;"
              >
                Datum
              </th>
              <th
                class="ams-table__header-cell"
                style="width: 25%;"
              >
                Document
              </th>
            </tr>
          </thead>
          <tbody
            class="ams-table__body"
          >
            <tr
              class="ams-table__row"
            >
              <td
                class="ams-table__cell"
              >
                14 Mei 2020
              </td>
              <td
                class="ams-table__cell"
              >
                <span
                  class="_DocumentLinkWrap_81c3b4"
                >
                  <a
                    class="ams-link _DocumentLink_81c3b4 _MaLink_aa758a _MaRouterLink__no-default-underline_aa758a"
                    href="/wpi/document/id"
                  >
                    <span
                      class="_DocumentLinkIcon_81c3b4"
                    >
                      <span
                        class="ams-icon ams-icon--heading-5"
                      >
                        <svg
                          aria-hidden="true"
                          focusable="false"
                          viewBox="0 0 32 32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 27.996h32V32H0zm22.36-13.983 2.83 2.823L16 26.044l-9.19-9.208 2.83-2.823L14 18.377V0h4v18.377z"
                          />
                        </svg>
                      </span>
                    </span>
                    PDF
                  </a>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
